--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-  <title>Vite + Vue</title>
+  <title>Blog</title>
 </head>
 
 <body>
